# PredUCE

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  env.yaml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
RScript/: bootstrap.R
acu/notebooks/: 1. Treatment-Centered-Emerg-Pred.ipynb  2. Clinic-Centered-Emerg-Pred.ipynb
acu/scripts/: run.py
acu/src/: pipeline.py
envs/: acu_env.yaml
notebooks/: Analysis.ipynb  Emerg.ipynb  Symptom.ipynb
notebooks/acu/: 1. Treatment-Centered-Emerg-Pred.ipynb  2. Clinic-Centered-Emerg-Pred.ipynb  Emerg.ipynb  Supplement.ipynb  Treatment-Centered-Emerg-Pred.ipynb
notebooks/symp/: Plots.ipynb  Supplement.ipynb  Symptom.ipynb
notebooks/symptom/: Plots.ipynb  Supplement.ipynb
scripts/: ed_association.py  train_pipeline.py
scripts/symp/: ed_association.py  train_pipeline.py
shared/: summarize.py  util.py
src/: __init__.py  config.py  constants.py  eval.py  filter.py  label.py  run_shap.py  summarize.py  train.py  util.py  utility.py  viz.py
src/acu/: constants.py  eval.py  label.py  pipeline.py  train.py
src/ag/: __init__.py  eval.py  train.py
src/models/: GRU.py  LSTM.py  MLP.py  TCN.py  Transformer.py
src/prepare/: clinic.py  engineer.py  filter.py  pipeline.py  prep.py  split.py
src/symp/: label.py  pipeline.py  shap.py  train.py  util.py
src/symp/models/: GRU.py  LSTM.py  MLP.py  (+2 more)
symp/: README.md  env.yaml
symp/notebooks/: Plots.ipynb
symp/scripts/: run.py
symp/src/: config.py  pipeline.py  viz.py
test/: test.py  test_summarize.py  test_util.py  util.py
(+1 files in other folders)
