[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "preduce"
description = "Predict undesirable cancer events"
version = "0.1.0"
authors = [
    { name = "Kevin He", email = "Kevin.He@uhn.ca" },
    { name = "Noke Yuan", email = "Baijiang.Yuan@uhn.ca" }
]
dependencies = [
    "ml_common @ git+https://github.com/ml4oncology/ml-common.git"
]

[tool.setuptools]
package-dir = {"preduce" = "src"}