[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "preduce"
description = "Predict undesirable cancer events"
version = "0.1.1"
authors = [
    { name = "Kevin He", email = "Kevin.He@uhn.ca" },
    { name = "Noke Yuan", email = "Baijiang.Yuan@uhn.ca" }
]
dependencies = [
    "make_clinical_dataset @ git+https://github.com/ml4oncology/make-clinical-dataset.git@v2.0.0"
]

[project.optional-dependencies]
dev = [
    "nbstripout",
    "pytest",
    "pytest-xdist",
]

[tool.setuptools]
package-dir = {"preduce" = "src"}